# BloodSword

./: .gitignore  LICENSE  README  requirements.txt  setup.cfg
bloodsword/: abstract.py  enumeration.py  geometry.py  protocols.py
bloodsword/base/: __init__.py
bloodsword/characters/: __init__.py  sage.py  warrior.py
bloodsword/descriptors/: armour.py  attributes.py
bloodsword/domain/: aggregates.py  entities.py  factories.py  repositories.py  values.py
bloodsword/items/: __init__.py
bloodsword/utils/: __init__.py
docs/source/: abstract.rst  conf.py  enumeration.rst  geometry.rst  index.rst
tests/: test_characters.py  test_utils.py
