[metadata]
name = bloodsword
version = 0.0.1
description = Library code for bloodsword game 
long_description = file: README
license= BSD-2-Clause
classifiers=
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
zip_safe = False 
include_package_data = True
packages = bloodsword